    by making sure that the rx buffer is empty when SETUP tokens are expected.
    We therefore don't pass zero sized data packets from the status phase of
    a transfer to usbPoll(). This change MAY cause troubles if you rely on
    receiving a less than 8 bytes long packet in usbFunctionWrite() to
    identify the end of a transfer. usbFunctionWrite() will NEVER be called
    with a zero length.

* Release 2006-03-14

  - Improved IAR C support: tiny memory model, more devices
  - Added template usbconfig.h file under the name usbconfig-prototype.h

* Release 2006-03-26

  - Added provision for one more interrupt-in endpoint (endpoint 3).
  - Added provision for one interrupt-out endpoint (endpoint 1).
  - Added flowcontrol macros for USB.
  - Added provision for custom configuration descriptor.
  - Allow ANY two port bits for D+ and D-.
  - Merged (optional) receive endpoint number into global usbRxToken variable.
  - Use USB_CFG_IOPORTNAME instead of USB_CFG_IOPORT. We now construct the
    variable name from the single port letter instead of computing the address
    of related ports from the output-port address.

* Release 2006-06-26

  - Updated documentation in usbdrv.h and usbconfig-prototype.h to reflect the
    new features.
  - Removed "#warning" directives because IAR does not understand them. Use
    unused static variables instead to generate a warning.
  - Do not include <avr/io.h> when compiling with IAR.
  - Introduced USB_CFG_DESCR_PROPS_* in usbconfig.h to configure how each
    USB descriptor should be handled. It is now possible to provide descriptor
    data in Flash, RAM or dynamically at runtime.
  - STALL is now a status in usbTxLen* instead of a message. We can now conform
    to the spec and leave the stall status pending until it is cleared.
  - Made usbTxPacketCnt1 and usbTxPacketCnt3 public. This allows the
    application code to reset data toggling on interrupt pipes.

* Release 2006-07-18