@@ -1,11 +1,11 @@
 /* Name: usbconfig.h
- * Project: AVR USB driver
+ * Project: AVR-Doper
  * Author: Christian Starkjohann
- * Creation Date: 2005-04-01
+ * Creation Date: 2006-07-18
  * Tabsize: 4
- * Copyright: (c) 2005 by OBJECTIVE DEVELOPMENT Software GmbH
+ * Copyright: (c) 2006 by OBJECTIVE DEVELOPMENT Software GmbH
  * License: Proprietary, free under certain conditions. See Documentation.
- * This Revision: $Id: usbconfig.h,v 1.1 2007-04-27 02:20:37 raph Exp $
+ * This Revision: $Id: usbconfig.h,v 1.2 2007-04-28 20:36:21 raph Exp $
  */
 
 #ifndef __usbconfig_h_included__
@@ -13,24 +13,18 @@
 
 /*
 General Description:
-This file contains parts of the USB driver which can be configured and can or
-must be adapted to your hardware.
-
-Please note that the usbdrv contains a usbconfig-prototype.h file now. We
-recommend that you use that file as a template because it will always list
-the newest features and options.
+USB driver configuration for AVR-Doper
 */
 
 /* ---------------------------- Hardware Config ---------------------------- */
 
 #define USB_CFG_IOPORTNAME      D
 /* This is the port where the USB bus is connected. When you configure it to
- * "PORTB", the registers PORTB, PINB (=PORTB-2) and DDRB (=PORTB-1) will be
- * used.
+ * "B", the registers PORTB, PINB and DDRB will be used.
  */
 #define USB_CFG_DMINUS_BIT      0
 /* This is the bit number in USB_CFG_IOPORT where the USB D- line is connected.
- * This MUST be bit 0 or 7. All other values will result in a compile error!
+ * This may be any bit in the port.
  */
 #define USB_CFG_DPLUS_BIT       2
 /* This is the bit number in USB_CFG_IOPORT where the USB D+ line is connected.
@@ -38,16 +32,27 @@ the newest features and options.
  * to interrupt pin INT0!
  */
 
-/* #define USB_CFG_PULLUP_IOPORTNAME   B */
-/* This is the port where the USB D- pullup resistor is connected. When you
- * configure it to "PORTB", the registers PORTB and DDRB (=PORTB-1) will be
- * used. If this constant is defined, the macros usbDeviceConnect() and
- * usbDeviceDisconnect will be available.
+/* ----------------------- Optional Hardware Config ------------------------ */
+
+/* #define USB_CFG_PULLUP_IOPORTNAME   D */
+/* If you connect the 1.5k pullup resistor from D- to a port pin instead of
+ * V+, you can connect and disconnect the device from firmware by calling
+ * the macros usbDeviceConnect() and usbDeviceDisconnect() (see usbdrv.h).
+ * This constant defines the port on which the pullup resistor is connected.
  */
-/* #define USB_CFG_PULLUP_BIT          2 */
-/* This is the bit number in USB_CFG_PULLUP_IOPORT where the USB D- 1.5 kOhm
- * pullup resistor is connected instead of VBUS. This may be any bit in
- * the port.
+/* #define USB_CFG_PULLUP_BIT          4 */
+/* This constant defines the bit number in USB_CFG_PULLUP_IOPORT (defined
+ * above) where the 1.5k pullup resistor is connected. See description
+ * above for details.
+ */
+/* #define  USB_BUFFER_SECTION         ".bss" */
+/* The USB receive buffer (variable "usbRxBuf") with a length of 22 bytes
+ * MUST NOT cross a 256 byte boundary. We have introduced this configuration
+ * option to allow you to change the data segment where this buffer is
+ * allocated. If you have problems with the default segment (start of .bss),
+ * you may change this setting. See the comment in usbdrv.h for details.
+ * On IAR C, the default is the TINY_Z segment (first 256 bytes). You must
+ * change this default for devices which don't have RAM below 0x100.
  */
 
 /* --------------------------- Functional Range ---------------------------- */
@@ -55,6 +60,11 @@ the newest features and options.
 #define USB_CFG_HAVE_INTRIN_ENDPOINT    0
 /* Define this to 1 if you want to compile a version with two endpoints: The
  * default control endpoint 0 and an interrupt-in endpoint 1.
+ */
+#define USB_CFG_HAVE_INTRIN_ENDPOINT3   0
+/* Define this to 1 if you want to compile a version with three endpoints: The
+ * default control endpoint 0, an interrupt-in endpoint 1 and an interrupt-in
+ * endpoint 3. You must also enable endpoint 1 above.
  */
 #define USB_CFG_IMPLEMENT_HALT          0
 /* Define this to 1 if you also want to implement the ENDPOINT_HALT feature
@@ -71,7 +81,7 @@ the newest features and options.
 /* Define this to 1 if the device has its own power supply. Set it to 0 if the
  * device is powered from the USB bus.
  */
-#define USB_CFG_MAX_BUS_POWER           500
+#define USB_CFG_MAX_BUS_POWER           100
 /* Set this variable to the maximum USB bus power consumption of your device.
  * The value is in milliamperes. [It will be divided by two since USB
  * communicates power requirements in units of 2 mA.]
@@ -96,45 +106,120 @@ the newest features and options.
  * data from a static buffer, set it to 0 and return the data from
  * usbFunctionSetup(). This saves a couple of bytes.
  */
+#define USB_CFG_IMPLEMENT_FN_WRITEOUT   0
+/* Define this to 1 if you want to use interrupt-out (or bulk out) endpoint 1.
+ * You must implement the function usbFunctionWriteOut() which receives all
+ * interrupt/bulk data sent to endpoint 1.
+ */
+#define USB_CFG_HAVE_FLOWCONTROL        0
+/* Define this to 1 if you want flowcontrol over USB data. See the definition
+ * of the macros usbDisableAllRequests() and usbEnableAllRequests() in
+ * usbdrv.h.
+ */
 
 /* -------------------------- Device Description --------------------------- */
 
-#define  USB_CFG_VENDOR_ID  0x81, 0x17  /* Mecanique */
-#define USB_CFG_DEVICE_ID   0x98, 0x0a  
+#define  USB_CFG_VENDOR_ID       0x81, 0x17 /* Mecanique */
+#define  USB_CFG_DEVICE_ID       0x98, 0x0a 
 #define USB_CFG_DEVICE_VERSION  0x00, 0x01
+/* Version number of the device: Minor number first, then major number.
+ */
 #define USB_CFG_VENDOR_NAME     'r','a','p','h','n','e','t','.','n','e','t'
 #define USB_CFG_VENDOR_NAME_LEN 11
-#define USB_CFG_DEVICE_NAME     'U','S','B','_','T','e','m','p'
-#define USB_CFG_DEVICE_NAME_LEN 8
-#define USB_CFG_SERIAL_NUMBER_LENGTH  4
-/* Set this define to the number of charcters in the serial number if your
- * device should have a serial number to uniquely identify each hardware
- * instance. You must supply the serial number in a string descriptor with the
- * name "usbCfgSerialNumberStringDescriptor", e.g.:
- * #define USB_CFG_SERIAL_NUMBER_LENGTH  5
- * int usbCfgSerialNumberStringDescriptor[] PROGMEM = {
- *     USB_STRING_DESCRIPTOR_HEADER(USB_CFG_SERIAL_NUMBER_LENGTH),
- *     '1', '2', '3', '4', '5'
- * };
- * See usbdrv.h for more information about the USB_STRING_DESCRIPTOR_HEADER()
- * macro or usbdrv.c for example string descriptors.
- * You may want to put "usbCfgSerialNumberStringDescriptor" at a constant
- * flash memory address (with magic linker commands) so that you don't need
- * to recompile if you change it.
+/* These two values define the vendor name returned by the USB device. The name
+ * must be given as a list of characters under single quotes. The characters
+ * are interpreted as Unicode (UTF-16) entities.
+ * If you don't want a vendor name string, undefine these macros.
+ * ALWAYS define a vendor name containing your Internet domain name if you use
+ * obdev's free shared VID/PID pair. See the file USBID-License.txt for
+ * details.
  */
-#define USB_CFG_DEVICE_CLASS    0xff
-#define USB_CFG_DEVICE_SUBCLASS 0
+#define USB_CFG_DEVICE_NAME     'U','S','B','_','T','e','m','p'
+#define USB_CFG_DEVICE_NAME_LEN  8
+#define USB_CFG_SERIAL_NUMBER   '1', '0', '0', '0' 
+#define USB_CFG_SERIAL_NUMBER_LEN   4
+#define USB_CFG_DEVICE_CLASS        0xff
+#define USB_CFG_DEVICE_SUBCLASS     0
 /* See USB specification if you want to conform to an existing device class.
  */
-#define USB_CFG_INTERFACE_CLASS     0
-#define USB_CFG_INTERFACE_SUBCLASS  0
-#define USB_CFG_INTERFACE_PROTOCOL  0
+#define USB_CFG_INTERFACE_CLASS     0    /* CDC class */
+#define USB_CFG_INTERFACE_SUBCLASS  0       /* Abstract (Modem) */
+#define USB_CFG_INTERFACE_PROTOCOL  0       /* AT-Commands */
 /* See USB specification if you want to conform to an existing device class or
  * protocol.
+ * This template defines a HID class device. If you implement a vendor class
+ * device, set USB_CFG_INTERFACE_CLASS to 0 and USB_CFG_DEVICE_CLASS to 0xff.
  */
-#define USB_CFG_HID_REPORT_DESCRIPTOR_LENGTH    0   /* total length of report descriptor */
-/* Define this to the length of the HID report descriptor, if you implement
- * an HID device. Otherwise don't define it or define it to 0.
+
+/* ------------------- Fine Control over USB Descriptors ------------------- */
+/* If you don't want to use the driver's default USB descriptors, you can
+ * provide our own. These can be provided as (1) fixed length static data in
+ * flash memory, (2) fixed length static data in RAM or (3) dynamically at
+ * runtime in the function usbFunctionDescriptor(). See usbdrv.h for more
+ * information about this function.
+ * Descriptor handling is configured through the descriptor's properties. If
+ * no properties are defined or if they are 0, the default descriptor is used.
+ * Possible properties are:
+ *   + USB_PROP_IS_DYNAMIC: The data for the descriptor should be fetched
+ *     at runtime via usbFunctionDescriptor().
+ *   + USB_PROP_IS_RAM: The data returned by usbFunctionDescriptor() or found
+ *     in static memory is in RAM, not in flash memory.
+ *   + USB_PROP_LENGTH(len): If the data is in static memory (RAM or flash),
+ *     the driver must know the descriptor's length. The descriptor itself is
+ *     found at the address of a well known identifier (see below).
+ * List of static descriptor names (must be declared PROGMEM if in flash):
+ *   char usbDescriptorDevice[];
+ *   char usbDescriptorConfiguration[];
+ *   char usbDescriptorHidReport[];
+ *   char usbDescriptorString0[];
+ *   int usbDescriptorStringVendor[];
+ *   int usbDescriptorStringDevice[];
+ *   int usbDescriptorStringSerialNumber[];
+ * Other descriptors can't be provided statically, they must be provided
+ * dynamically at runtime.
+ *
+ * Descriptor properties are or-ed or added together, e.g.:
+ * #define USB_CFG_DESCR_PROPS_DEVICE   (USB_PROP_IS_RAM | USB_PROP_LENGTH(18))
+ *
+ * The following descriptors are defined:
+ *   USB_CFG_DESCR_PROPS_DEVICE
+ *   USB_CFG_DESCR_PROPS_CONFIGURATION
+ *   USB_CFG_DESCR_PROPS_STRINGS
+ *   USB_CFG_DESCR_PROPS_STRING_0
+ *   USB_CFG_DESCR_PROPS_STRING_VENDOR
+ *   USB_CFG_DESCR_PROPS_STRING_PRODUCT
+ *   USB_CFG_DESCR_PROPS_STRING_SERIAL_NUMBER
+ *   USB_CFG_DESCR_PROPS_HID
+ *   USB_CFG_DESCR_PROPS_HID_REPORT
+ *   USB_CFG_DESCR_PROPS_UNKNOWN (for all descriptors not handled by the driver)
+ *
  */
+
+#define USB_CFG_DESCR_PROPS_DEVICE                  0
+#define USB_CFG_DESCR_PROPS_CONFIGURATION           0
+#define USB_CFG_DESCR_PROPS_STRINGS                 0
+#define USB_CFG_DESCR_PROPS_STRING_0                0
+#define USB_CFG_DESCR_PROPS_STRING_VENDOR           0
+#define USB_CFG_DESCR_PROPS_STRING_PRODUCT          0
+#define USB_CFG_DESCR_PROPS_STRING_SERIAL_NUMBER    0
+#define USB_CFG_DESCR_PROPS_HID                     0
+#define USB_CFG_DESCR_PROPS_HID_REPORT              0
+#define USB_CFG_DESCR_PROPS_UNKNOWN                 0
+
+/* ----------------------- Optional MCU Description ------------------------ */
+
+/* The following configurations have working defaults in usbdrv.h. You
+ * usually don't need to set them explicitly. Only if you want to run
+ * the driver on a device which is not yet supported or with a compiler
+ * which is not fully supported (such as IAR C) or if you use a differnt
+ * interrupt than INT0, you may have to define some of these.
+ */
+/* #define USB_INTR_CFG            MCUCR */
+/* #define USB_INTR_CFG_SET        ((1 << ISC00) | (1 << ISC01)) */
+/* #define USB_INTR_CFG_CLR        0 */
+/* #define USB_INTR_ENABLE         GIMSK */
+/* #define USB_INTR_ENABLE_BIT     INT0 */
+/* #define USB_INTR_PENDING        GIFR */
+/* #define USB_INTR_PENDING_BIT    INTF0 */
 
 #endif /* __usbconfig_h_included__ */
